--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ opt-level = 3
 [dependencies]
 rand = "0.8.5"
 rayon = "1.6"
-indicatif = {version = "*", features = ["rayon"]}
+indicatif = {version = "0.17.2", features = ["rayon"]}
